LPS-84247 user-associated-data-web - main.scss - fixes spacing between pieces of info

--- a/modules/apps/foundation/user-associated-data/user-associated-data-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/foundation/user-associated-data/user-associated-data-web/src/main/resources/META-INF/resources/css/main.scss
@@ -18,3 +18,11 @@
 	}
 
 }
+
+.uad-info-panel {
+
+	.info-panel-dd {
+		margin-bottom: 10px;
+	}
+
+}
